iptables
# Generated by iptables-save v1.4.21 on Fri Jul  6 10:21:57 2018
*nat
:PREROUTING ACCEPT [28:1680]
:INPUT ACCEPT [303:18870]
:OUTPUT ACCEPT [76869:5098803]
:POSTROUTING ACCEPT [76657:5086083]
:DOCKER - [0:0]
-A PREROUTING -p tcp -m tcp --dport 443 -j REDIRECT --to-ports 3130
-A PREROUTING -p tcp -m tcp --dport 8140 -j REDIRECT --to-ports 3129
-A PREROUTING -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 3129
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -p tcp -m tcp --dport 10516 -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
COMMIT
# Completed on Fri Jul  6 10:21:57 2018
# Generated by iptables-save v1.4.21 on Fri Jul  6 10:21:57 2018
*filter
:INPUT ACCEPT [910892:546508455]
:FORWARD ACCEPT [9:516]
:OUTPUT ACCEPT [833538:612986183]
:DOCKER - [0:0]
:DOCKER-ISOLATION - [0:0]
-A FORWARD -j DOCKER-ISOLATION
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A DOCKER-ISOLATION -j RETURN
COMMIT
# Completed on Fri Jul  6 10:21:57 2018
